# funny-chicken-engine

./: .gitignore  CMakeLists.txt  README.md  cube.glb  test.frag  test.vert  test2.frag  test2.vert
include/: engine.h  error.h  event.h  file.h  fn_state.h  global_variable.h  math3d.h  shader.h
src/: glfw_callback.c  global_variable.c  main.c  mat.c  model_3d.c  mouse_event.c  opengl_context.c  opengl_engine.c  opengl_error.c  opengl_shader.c  window_event.c
